Fixing and cropping jpeg

--- a/src/static/libraries/layout/NavBar.css
+++ b/src/static/libraries/layout/NavBar.css
@@ -406,7 +406,7 @@ li .emoji {
 
 .hero-composite-splash {
     /*$background: url("/static/images/hero/jovanka_splash_photo_rasterized.jpg");*/
-    background: url("/static/images/images-landing/_HLA6968.jpg");
+    background: url("/static/images/images-landing/HLA6968_cropped.jpg");
     background-size: 100% auto;
     /* Aspect ratio: 1920x866 = 0.4510416 */
     height: calc(100vw * 0.45);
